# aipp201

./: .clang-format  CLAUDE.md  CMakeLists.txt  CMakePresets.json
.claude/: settings.local.json
cmake/: AtlasWithFormat.cmake  CompileOptions.cmake  Setup.cmake  ThirdParty.cmake
prds/: spsc-queue.feature  spsc-queue.md
src/: CMakeLists.txt  SpscQueue.hpp  Version.hpp.in  aipp.cpp  types.atlas  types_gen.hpp
src/testing/: CMakeLists.txt  doctest.hpp  testing.cpp
src/tests/: CMakeLists.txt  Foo_ut.cpp  SpscQueue_ut.cpp  main.cpp
